--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -4,7 +4,7 @@
     "origin": [
       [
         "src/App.js",
-        67
+        70
       ]
     ]
   },
@@ -13,7 +13,7 @@
     "origin": [
       [
         "src/App.js",
-        89
+        98
       ]
     ]
   },
@@ -22,7 +22,16 @@
     "origin": [
       [
         "src/App.js",
-        81
+        84
+      ]
+    ]
+  },
+  "The loading language is <0>{activeLang}</0>.": {
+    "translation": "The loading language is <0>{activeLang}</0>.",
+    "origin": [
+      [
+        "src/App.js",
+        89
       ]
     ]
   },
@@ -31,7 +40,7 @@
     "origin": [
       [
         "src/App.js",
-        70
+        73
       ]
     ]
   }
